package org.Group34.model.entities;

import org.Group34.model.map.Space;

public class Player extends Entity {
    public Player(int[] initialLocation) {
        super(initialLocation, true);
    }
}
