package org.Group34.model.enums;

public enum Farm {
}
