package org.Group34.model.features;

public class Energy {
}
