package org.Group34.model.items;

public interface Item {
    String getName();
}
