package org.Group34.model.items.tools;

import org.Group34.model.items.Item;

public class Tool implements Item {
    public String getName() {
        return "Tool";
    }
}
